syntax = "proto3";

package feedfetcher;

service FeedFetcherController {
  rpc FetchFeed (FetchDetails) returns (FetchFeedDetailsDto) {}
}

message FetchDetails {
  string url = 1;
  bool executeFetch = 2;
}

message FetchFeedDetailsDto {
  message FetchFeedResponseDto {
    int32 statusCode = 1;
    string body = 2;
  }
  string requestStatus = 1;
  FetchFeedResponseDto response = 2;
}